# rustycrab

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  startup.bash
api/: Cargo.toml
api/src/: app_state.rs  bot_guild_entity_queries.rs  bot_guild_entity_router.rs  default_queries.rs  lib.rs  (+8 more)
database-migration/: Cargo.toml
database-migration/src/: lib.rs  main.rs
database-migration/src/migrations/: auto_res.rs  bot_config.rs  bot_users.rs  guild_welcomes.rs  items.rs  marriage.rs  mod.rs
database-migration/src/old_database/: auto_responses.rs  booking_activities.rs  booking_player.rs  bookingbot_settings.rs  bot_guild_configurations.rs  bot_guild_logs.rs  bot_guild_welcomes.rs  bot_user_info.rs  bots_info.rs  embed_info.rs  gambling_settings.rs  guild_info.rs  items.rs  marriage.rs  mod.rs  prelude.rs  test_users.rs  twitch_follows.rs  user_info.rs
rustycrab-api/: Cargo.toml
rustycrab-api/src/: app_state.rs  default_router.rs  lib.rs  main.rs  multi_bot_guild_entities_queries.rs  multi_bot_guild_entities_router.rs  unique_bot_guild_entity_router.rs
rustycrab-api/src/database/: auto_responses.rs  auto_roles.rs  bot_guild_configurations.rs  bot_guild_welcomes.rs  bot_staffs.rs  bot_users.rs  buttons.rs  embed_fields.rs  embed_info.rs  guild_action_logs.rs  items.rs  log_ignore_channels.rs  log_ignore_roles.rs  log_settings.rs  marriages.rs  messages.rs  ticket_multi_panels.rs  ticket_panels.rs  ticket_settings.rs  ticket_support_teams.rs  tickets.rs
rustycrab-api/src/locales/: mod.rs
rustycrab-api/src/locales/en/: main.ftl
rustycrab-api/src/locales/vn/: main.ftl
rustycrab-api/src/queries/: auto_responses_queries.rs  bot_user_queries.rs  guild_config_queries.rs  guild_welcome_queries.rs  item_queries.rs  marriages_queries.rs  message_queries.rs  mod.rs  user_queries.rs
rustycrab-api/src/queries/guild_logs/: action_log_queries.rs  log_ignore_channel_queries.rs  log_ignore_role_queries.rs  log_setting_queries.rs
rustycrab-api/src/queries/tickets_system/: mod.rs  ticket_multipanels_queries.rs  ticket_panels_queries.rs  ticket_queries.rs  ticket_setting_queries.rs  ticket_support_team_queries.rs
rustycrab-api/src/router/: create_router.rs
rustycrab-api/src/router/routes/: bot_guild_configs.rs  bot_guild_welcomes.rs  bot_users.rs  bots.rs  guilds.rs  hello_world.rs  mod.rs  users_routes.rs
rustycrab-api/src/router/routes/bot_logs/: action_logs.rs  log_ignores.rs  log_settings.rs  mod.rs
rustycrab-api/src/router/routes/discord_oauth/: auth.rs  login.rs  mod.rs  redirect.rs  state.rs
rustycrab-api/src/router/routes/tickets/: mod.rs  ticket_multipanels.rs  ticket_panels.rs  ticket_settings.rs  ticket_support_teams.rs  tickets.rs
rustycrab-api/src/twilightrs/: discord_client.rs  messages.rs
rustycrab-api/src/twilightrs/bot/: mod.rs
rustycrab-api/src/twilightrs/bot/auto_response/: mod.rs
rustycrab-api/src/twilightrs/bot/voice_music/: mod.rs  parse_url.rs  soundcloud_api.rs  spotify_api.rs  voice_manager.rs  youtube_api.rs
rustycrab-api/src/twilightrs/bot/voice_music/player/: add_next_track.rs  add_track_to_queue.rs  mod.rs  track_info.rs
rustycrab-api/src/twilightrs/bot/voice_music/player/track_events/: error.rs  mod.rs  play.rs  stop.rs
rustycrab-api/src/twilightrs/bot/voice_music/utils/: mod.rs  parse_url.rs  soundcloud.rs  youtube_dl.rs
rustycrab-api/src/twilightrs/commands/: mod.rs
rustycrab-api/src/twilightrs/commands/context/: context_command.rs  mod.rs
rustycrab-api/src/twilightrs/commands/context/admin/: ban.rs  kick.rs  language.rs  mod.rs  prefix.rs  set_role.rs  timeout.rs  unban.rs  untimeout.rs
rustycrab-api/src/twilightrs/commands/context/admin/auto_response/: add.rs  color.rs  content.rs  delete.rs  image.rs  list.rs  mod.rs  text_message.rs  thumbnail.rs  utils.rs
rustycrab-api/src/twilightrs/commands/context/general/: avatar.rs  help.rs  math.rs
rustycrab-api/src/twilightrs/commands/context/voice/: README.md  join.rs  leave.rs  loop_music.rs  loopq_music.rs  pause.rs  play.rs  queue.rs  resume.rs  skip.rs  skip_to.rs  song.rs  stop.rs  tts.rs
rustycrab-api/src/twilightrs/commands/slash/: slash_command.rs
rustycrab-api/src/twilightrs/events/: message_create.rs  message_delete.rs  mod.rs
rustycrab-api/src/twilightrs/events/interaction_handlers/: mod.rs
rustycrab-api/src/twilightrs/events/interaction_handlers/buttons/: afk.rs
rustycrab-api/src/twilightrs/events/interaction_handlers/buttons/tickets/: open_ticket.rs
rustycrab-api/src/twilightrs/events/voice_updates/: mod.rs  update_type.rs
rustycrab-api/src/twilightrs/utils/: mod.rs
rustycrab-api/src/utilities/: app_error.rs  mod.rs
rustycrab-model/: Cargo.toml
rustycrab-webapp/: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
rustycrab-webapp/src/: app.rs  main.rs  router.rs
rustycrab-webapp/src/components/: button.rs  header.rs  mod.rs
rustycrab-webapp/src/pages/: about.rs  home.rs
rustycrab-webapp/src/utils/: mod.rs
spotify/: Cargo.toml
spotify-api/: Cargo.toml
src/: default_queries.rs  default_router.rs  lib.rs  multi_bot_guild_entities_router.rs  unique_bot_guild_entity_queries.rs  unique_bot_guild_entity_router.rs
(+274 files in other folders)
