[package]
name = "api"
version = "0.1.0"
edition = "2021"

[features]
default = ["voice"]
voice = ["opus", "sodiumoxide", "byteorder"]

[dependencies]
log = "0.4.20"
env_logger = "0.10"
sea-orm = { version = "0.12.6", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
axum = { version = "0.6.20", features = ["macros", "headers"] }
# mysql = "24.0" # This is the MySQL client, not required if you're using SeaORM
# actix-web = "4.4" # Or any other web framework you prefer
dotenv = "0.15.0" # To manage environment variables
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16.0", features = ["derive"] }
# struct_iterable = "0.1.1"

# https://github.com/SpaceManiac/discord-rs/blob/master/Cargo.toml
# discord = { git = "https://github.com/SpaceManiac/discord-rs" }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-cache-inmemory = {version = "0.15.4", features = ["permission-calculator"]}
songbird = {version =  "0.4.0-rc", features = ["twilight"]}
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.3" }

futures = "0.3.29"

chrono = "0.4.31"

opus = { version = "0.3.0", optional = true }
byteorder = { version = "1.3", optional = true }
async-trait = "0.1"
reqwest = { version = "0.11.22" }

enum-primitive-derive = "0.3.0"
num-traits = "0.2.17"

# math
meval = "0.2"

# locales
fluent = "0.16.0"
fluent-bundle = "0.15.2"
intl-memoizer = "0.5.1"
unic-langid = "0.9.1"

[dependencies.sodiumoxide]
version = "0.2.5"
default-features = false
features = ["std"]
optional = true

# [patch.crates-io]
# zeroize = { version = "1.3.0" }