[package]
name = "database-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustycrab-model = { default-features = false, path = "../rustycrab-model", version = "0.2.0" }
rustycrab-api = { default-features = false, path = "../rustycrab-api", version = "0.2.0" }

async-trait = "0.1.74"
sea-orm = "0.12.7"
serde = "1.0.193"
tokio = "1.34.0"
dotenv = "0.15.0"
