[package]
name = "rustycrab-api"
version = "0.2.0"
edition = "2021"

[features]
default = ["voice"]
voice = ["opus", "sodiumoxide", "byteorder"]

[dependencies]
dotenv = "0.15.0"                                                                              # To manage environment variables
spotify-api = { default-features = false, path = "../spotify-api", version = "0.1.0" }
rustycrab-model = { default-features = false, path = "../rustycrab-model", version = "0.2.0" }
axum = { version = "0.7.1", features = ["macros"] }
tower = "0.4.13"
tower-sessions = { version = "0.7.0", features = ["mysql-store"] }
oauth2 = "4.4.2"

log = "0.4.20"
env_logger = "0.10.1"
sea-orm = { version = "0.12.6", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.16.0", features = ["derive"] }

twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-cache-inmemory = { version = "0.15.4", features = [
    "permission-calculator",
] }
twilight-standby = "0.15.4"

# music feature
songbird = { version = "0.4.0-rc", features = ["twilight"] }
symphonia = { features = [
    "aac",
    "mp3",
    "isomp4",
    "alac",
], version = "0.5.3" } # needed for soundbird
opus = { version = "0.3.0", optional = true }
headless_chrome = "1.0.8"

# utils
futures = "0.3.29"
futures-util = "0.3.29"
chrono = "0.4.31"
byteorder = { version = "1.3", optional = true }
async-trait = "0.1"
reqwest = { version = "0.11.22", features = ["json"] }
enum-primitive-derive = "0.3.0"
num-traits = "0.2.17"
url = "2.5.0"
regex = "1.10.2"
csscolorparser = "0.6.2"

# math
meval = "0.2"
rand = "0.8.5"

# locales
fluent = "0.16.0"
fluent-bundle = "0.15.2"
intl-memoizer = "0.5.1"
unic-langid = "0.9.1"

time = "0.3.30"
youtube_dl = "0.9.0"

[dependencies.sodiumoxide]
version = "0.2.5"
default-features = false
features = ["std"]
optional = true
