[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rustycrab-model = { default-features = false, path = "../rustycrab-model", version = "0.2.0" }
gloo = "0.10.0"
wasm-bindgen = "0.2.89"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.0"
serde = "1.0.193"
reqwasm = "0.5.0"
web-sys = "0.3.66"
reqwest = "0.11.22"
